[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ActionsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/SceneManager.gd" type="Script" id=3]
[ext_resource path="res://scenes/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/MenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Joystick.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Dialog.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "transition_to_transparent"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToTransparent"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="SceneManager" type="Node2D"]
script = ExtResource( 3 )

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Map" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="ScreenTransition" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ScreenTransition"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition"]
anims/FadeToBlack = SubResource( 1 )
anims/FadeToTransparent = SubResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MenuOverlay" parent="UI" instance=ExtResource( 4 )]

[node name="MenuButton" parent="UI" instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -400.0
margin_top = -800.0

[node name="Joystick" parent="UI" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -144.0
margin_right = 64.0
margin_bottom = -16.0

[node name="ActionsButton" parent="UI" instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -128.0
margin_right = 112.0
margin_bottom = -32.0

[node name="Dialog" parent="UI" instance=ExtResource( 7 )]
visible = false
margin_top = -208.0
margin_bottom = -148.0
